fixed grid on firefox

--- a/components/grid/grid.scss
+++ b/components/grid/grid.scss
@@ -2,14 +2,14 @@
 
 .grid {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
   margin-bottom: 24px;
 
-  img {
+  span {
     @include xsm {
-      width: 40%;
+      width: 50%;
       padding: 16px;
     }
 
@@ -24,6 +24,10 @@
 
     @include md {
       width: 220px;
+    }
+
+    img {
+      width: 100%;
     }
   }
 
